Font and Color Changes
-Changed the Header image
-Changed the Header font
-Change the font for the body text
-Added the icons for the list headers
-Adjust colors of the icons to match websites.

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
 
 .masthead {
     padding: 6em 0;
-    background-image: url('http://i.imgur.com/N300Sx2.jpg');
+    background-image: url('http://i.imgur.com/8zjA0a7.png');
     background-repeat: no-repeat;
     background-size: cover;
     border-top: solid 1em #D8D8D8;
@@ -39,18 +39,20 @@ body {
 
 .masthead-intro {
   margin-bottom: 0.1em;
-  font-family: "Gentium Book Basic", Georgia, serif;
   font-size: 2em;
+  text-shadow: 2px 2px #000;
 }
 
 .masthead-heading {
     margin-top: -0.2em;
-    font-family: "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: 'Lobster', cursive;
     font-weight: bold;
+    text-shadow: 2px 2px #000;
     font-size: 6em;
-    letter-spacing: -0.02em;
-    text-transform: uppercase;
+    letter-spacing: 0.05em;
 }
+
+/* universal box sizes */
 
 .content-footer,
 .introduction-section,
@@ -67,6 +69,37 @@ body {
     color: #848484;
 }
 
+/* Introduction Title bar */
+
+.introduction-section .introduction-head {
+  background-color: #848484;
+  color: #D8D8D8;
+  margin: -5px -25px;
+  padding-left: 25px;
+  border-radius: 5px 5px 0 0;
+}
+
+.introduction-section h1 {
+  display: inline-block;
+}
+
+.fa-info {
+  vertical-align: middle;
+  color:#000;
+  padding: 5px;
+}
+
+
+/* Location Title bar */
+
+.location-section .location-head {
+  background-color: #848484;
+  color: #D8D8D8;
+  margin: -5px -25px;
+  padding-left: 25px;
+  border-radius: 5px 5px 0 0;
+}
+
 .location-section h1 {
   display: inline-block;
 }
@@ -77,8 +110,52 @@ body {
   padding: 5px;
 }
 
+/* Question Title bar */
+
+.questions-section .questions-header {
+  background-color: #848484;
+  color: #D8D8D8;
+  margin: -5px -25px;
+  padding-left: 25px;
+  border-radius: 5px 5px 0 0;
+}
+
+.questions-section h1 {
+  display: inline-block;
+}
+
+.fa-question {
+  vertical-align: middle;
+  color:#000;
+  padding: 5px;
+} 
+
+/* Projects Title bar */
+
+.projects .projects-head {
+  background-color: #848484;
+  color: #D8D8D8;
+  margin: -5px -25px;
+  padding-left: 25px;
+  border-radius: 5px 5px 0 0;  
+}
+
+.projects h1 {
+  display: inline-block;
+}
+
+
+.fa-tasks {
+  vertical-align: middle;
+  color:#000;
+  padding: 5px; 
+}
+
+/* social section */
+
 .social > li {
     display: inline-block;
+    padding: 7px;
 }
 
 .introduction > p,
@@ -92,7 +169,7 @@ body {
 .questions-section > h2,
 .projects > h2 {
     /* Typography Declarations */
-    font-family: "Gentium Book Basic", Georgia, serif;
+    font-family: "Open Sans", "Helvetica Neue", sans-serif;
     font-size: 1.2em;
     font-weight: bold;
 }
@@ -102,4 +179,21 @@ body {
   border-radius: 5px;
   background-color: #D8D8D8;
   text-color: #848484;
+}
+
+/* Social Icon Colors */
+
+.fa-github {
+  color: #000;
+  padding: 5px;
+}
+
+.fa-twitter {
+  color:#58ACFA;
+  padding: 5px;
+}
+
+.fa-google-plus {
+  color:#FF0000;
+  padding: 5px;
 }
